--- a/explanatory-notes/measure-description-scenarios.Rmd
+++ b/explanatory-notes/measure-description-scenarios.Rmd
@@ -25,8 +25,7 @@ Modifications to the baseline scenario are:
   1- stochastic tillage type selection
   Tell the model that from 2020, increase by 10% the cell assigned as reduced tillage (I am not sure if this is the part that needs to be modified for this measure to be applied).
   
-  2- annual change in tillage practices, in the baseline model the change in share between 2010 and 2016 from convetional to reduced tillage was 1.6% in the UK tillage area (Eurostat 2020). For scenario 1, the rate of change needs to be increased.
-  
+  2- annual change in tillage practices, in the baseline model the change in share between 2010 and 2016 from convetional to reduced tillage was 1.6% in the UK tillage area (Eurostat 2020). -- not sure how this parameter can be modified in the model.
 
 
 ## Scenario/measure 2:
